--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="col-lg-3"></div>
 			<div class="col-lg-8">
 				<h1>Bulls & Cows</h1>
-				Input：<input type="text" id="guessNum">
+				Input：<input type="number" id="guessNum">
 				<button id="confirmBtn" class="btn btn-default">Confirm</button>
 				<button id="restartBtn" class="btn btn-default" style="display: none">Restart</button>
 				
